@@ -1,3 +1,7 @@
+2008-04-12  Piotr Fusik  <fox@scene.pl>
+* asapscan.c, acpu.c: asapscan wasn't compilable
+
+
 2008-04-11  Piotr Fusik  <fox@scene.pl>
 * xbmc/xbmc_asap.c: metadata and subsongs
 
